log
Fri, Mar 28, 2025 11:36:00 AM: 
 list.c | 37 ++++++++++++++++++++++++++-----------
 1 file changed, 26 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:19: error: statement with no effect [-Werror=unused-value]
     lista -> tail == NULL;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Fri, Mar 28, 2025 11:37:00 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
50f01e6
Fri, Mar 28, 2025  2:51:50 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
50042d9
Fri, Mar 28, 2025  2:59:32 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
669e0e3
Fri, Mar 28, 2025  3:03:10 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9ef4e92
Fri, Mar 28, 2025  3:03:42 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0105549
Fri, Mar 28, 2025  3:04:31 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
8526379
Fri, Mar 28, 2025  3:05:12 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3075f37
Sat, Mar 29, 2025  8:19:11 AM: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:25: error: 'return' with a value, in function returning void [-Werror]
     return (list ->head ->data);
            ~~~~~~~~~~~~~^~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5f009f5
Sat, Mar 29, 2025  8:19:52 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:12: error: 'return' with a value, in function returning void [-Werror]
     return (aux);
            ^
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
20780d5
Sat, Mar 29, 2025  8:21:11 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:75:17: error: 'return' with a value, in function returning void [-Werror]
     return (aux -> data);
            ~~~~~^~~~~~~~
list.c:70:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4b24980
